--- a/index.html
+++ b/index.html
@@ -2,153 +2,151 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prasanna Shrestha</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Prasanna Shrestha | Consultant</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(135deg, #d4fc79, #96e6a1);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #333;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #e0ffe0, #f0fdfb);
     }
-
-    .profile-pic {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 4px solid white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      margin-bottom: 10px;
-    }
-
-    .upload-btn {
-      margin-top: 10px;
-    }
-
-    section {
-      padding: 60px 0;
-    }
-
-    .card {
-      border: none;
-      border-radius: 20px;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    footer {
-      background: #fff;
-      padding: 20px 0;
+    .hero {
+      background: linear-gradient(to right, rgba(0,100,0,0.6), rgba(255,255,255,0.1)), 
+                  url('https://source.unsplash.com/1600x700/?agriculture,tractor') center/cover no-repeat;
+      color: white;
+      padding: 120px 20px;
       text-align: center;
-      color: #777;
+    }
+    .hero h1 {
+      font-size: 3.5rem;
+      font-weight: bold;
+    }
+    .section-title {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-align: center;
+      font-weight: 600;
+      color: #135c0c;
+    }
+    .section-bg {
+      background-color: #ffffff;
+      border-radius: 16px;
+      padding: 40px 30px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+      margin-bottom: 50px;
+    }
+    .experience-item {
+      border-left: 4px solid #198754;
+      padding-left: 15px;
+      margin-bottom: 15px;
+      background: #f1fff1;
+      border-radius: 8px;
+      padding: 10px;
+    }
+    .img-card img {
+      height: 200px;
+      object-fit: cover;
+      width: 100%;
+      border-radius: 16px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      background: #135c0c;
+      color: white;
+      padding: 20px;
+    }
+    .social a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+    .btn-custom {
+      background: #198754;
+      color: white;
+      border-radius: 30px;
+      padding: 10px 25px;
+      font-weight: 500;
+      transition: 0.3s;
+    }
+    .btn-custom:hover {
+      background: #145c33;
+      color: #fff;
     }
   </style>
 </head>
 <body>
-  <!-- Header -->
-  <header class="text-center py-5">
-    <div class="container">
-      <input type="file" id="upload" accept="image/*" hidden />
-      <img src="https://via.placeholder.com/150" alt="Profile Picture" id="profileImage" class="profile-pic" />
-      <br />
-      <button class="btn btn-outline-dark btn-sm upload-btn" onclick="document.getElementById('upload').click()">Change Photo</button>
-      <h1 class="mt-3">Prasanna Shrestha</h1>
-      <h5 class="text-muted">Consultant</h5>
-    </div>
-  </header>
 
-  <!-- About Section -->
-  <section id="about" class="bg-white text-center">
-    <div class="container">
-      <h2>About Me</h2>
-      <p class="lead mt-3">Engineering meets Agricultural</p>
-    </div>
-  </section>
+  <div class="hero">
+    <h1>Prasanna Shrestha</h1>
+    <h4 class="mb-3">Consultant</h4>
+    <p class="lead">Engineering meets Agricultural</p>
+  </div>
 
-  <!-- Services Section -->
-  <section id="services" class="text-center bg-light">
-    <div class="container">
-      <h2>What I Offer</h2>
-      <div class="row mt-4">
-        <div class="col-md-4">
-          <div class="card p-4">
-            <h5>Farm Machinery Consultant</h5>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card p-4">
-            <h5>Agricultural Farm Design</h5>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card p-4">
-            <h5>Project DPR Preparation</h5>
-          </div>
-        </div>
+  <div class="container my-5 section-bg">
+    <div class="section-title">What I Offer</div>
+    <ul class="list-group list-group-flush mb-4">
+      <li class="list-group-item">✅ Agricultural Farm Design & Estimate</li>
+      <li class="list-group-item">✅ DPR Preparation</li>
+      <li class="list-group-item">✅ GIS Training</li>
+    </ul>
+    <div class="row text-center mt-4">
+      <div class="col-md-3 img-card mb-4">
+        <img src="https://source.unsplash.com/400x300/?tractor" alt="Tractor">
+      </div>
+      <div class="col-md-3 img-card mb-4">
+        <img src="https://source.unsplash.com/400x300/?farm-machinery" alt="Farm Machinery">
+      </div>
+      <div class="col-md-3 img-card mb-4">
+        <img src="https://source.unsplash.com/400x300/?papaya" alt="Papaya">
+      </div>
+      <div class="col-md-3 img-card mb-4">
+        <img src="https://source.unsplash.com/400x300/?mushroom" alt="Mushroom">
       </div>
     </div>
-  </section>
+  </div>
 
-  <!-- Experience Section -->
-  <section id="experience" class="text-center bg-white">
-    <div class="container">
-      <h2>Past Experience</h2>
-      <ul class="list-group list-group-flush mt-4 text-start mx-auto" style="max-width: 600px;">
-        <li class="list-group-item">Agricultural Engineer at XYZ Agro Solutions (2018–2021)</li>
-        <li class="list-group-item">Farm Design Consultant for ABC Farms (2021–2023)</li>
-        <li class="list-group-item">Project Lead for Mechanization Drive – Nepal (Ongoing)</li>
-        <!-- You can add more experiences here -->
-      </ul>
+  <div class="container section-bg">
+    <div class="section-title">Experience</div>
+    <div class="experience-item">
+      <strong>Consultant at Ministry of Industry, Agriculture & Cooperative, Koshi Province</strong> – 4 years
     </div>
-  </section>
-
-  <!-- YouTube Section -->
-  <section id="youtube" class="text-center bg-white">
-    <div class="container">
-      <h2>Watch My Video</h2>
-      <div class="ratio ratio-16x9 mt-4">
-        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="YouTube video" allowfullscreen></iframe>
-      </div>
+    <div class="experience-item">
+      <strong>Consultant at Jeevan Bikash Samaj</strong> – 2 years
     </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="bg-white text-center">
-    <div class="container">
-      <h2>Contact</h2>
-      <p class="mt-3">
-        📞 <strong>+977-9842173686</strong><br />
-        ✉️ <strong>prasannastha22@gmail.com</strong>
-      </p>
+    <div class="experience-item">
+      <strong>Manager at Mishrima Engineering Works Pvt. Ltd</strong> – 3 years
     </div>
-  </section>
+    <div class="experience-item">
+      <strong>Agricultural Engineer at CIMMTY INTERNATIONAL</strong> – 2 years
+    </div>
+  </div>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      &copy; 2025 Prasanna Shrestha. All rights reserved.
+  <div class="container section-bg">
+    <div class="section-title">Latest YouTube Video</div>
+    <div class="ratio ratio-16x9 mb-3">
+      <!-- Replace with your actual YouTube video embed URL -->
+      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID_HERE" title="YouTube video" allowfullscreen></iframe>
+    </div>
+    <p class="text-center text-muted">Upload a new video anytime by replacing the YouTube link above.</p>
+  </div>
+
+  <div class="container section-bg">
+    <div class="section-title">Contact Me</div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><strong>Email:</strong> <a href="mailto:prasannastha22@gmail.com">prasannastha22@gmail.com</a></li>
+      <li class="list-group-item"><strong>Phone:</strong> +977-9842173686</li>
+      <li class="list-group-item"><strong>Facebook:</strong> <a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank">Prasanna Shrestha</a></li>
+    </ul>
+  </div>
+
+  <footer class="text-center mt-5">
+    <p>&copy; 2025 Prasanna Shrestha</p>
+    <div class="social">
+      <a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank">Facebook</a> |
+      <a href="mailto:prasannastha22@gmail.com">Email</a>
     </div>
   </footer>
 
-  <script>
-    const uploadInput = document.getElementById("upload");
-    const profileImage = document.getElementById("profileImage");
-
-    uploadInput.addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function (event) {
-          profileImage.src = event.target.result;
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
