--- a/index.html
+++ b/index.html
@@ -1,152 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prasanna Shrestha | Consultant</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e0ffe0, #f0fdfb);
-    }
-    .hero {
-      background: linear-gradient(to right, rgba(0,100,0,0.6), rgba(255,255,255,0.1)), 
-                  url('https://source.unsplash.com/1600x700/?agriculture,tractor') center/cover no-repeat;
-      color: white;
-      padding: 120px 20px;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 3.5rem;
-      font-weight: bold;
-    }
-    .section-title {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-      font-weight: 600;
-      color: #135c0c;
-    }
-    .section-bg {
-      background-color: #ffffff;
-      border-radius: 16px;
-      padding: 40px 30px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
-      margin-bottom: 50px;
-    }
-    .experience-item {
-      border-left: 4px solid #198754;
-      padding-left: 15px;
-      margin-bottom: 15px;
-      background: #f1fff1;
-      border-radius: 8px;
-      padding: 10px;
-    }
-    .img-card img {
-      height: 200px;
-      object-fit: cover;
-      width: 100%;
-      border-radius: 16px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-    }
-    footer {
-      background: #135c0c;
-      color: white;
-      padding: 20px;
-    }
-    .social a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-    .btn-custom {
-      background: #198754;
-      color: white;
-      border-radius: 30px;
-      padding: 10px 25px;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-    .btn-custom:hover {
-      background: #145c33;
-      color: #fff;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Prasanna Shrestha - Consultant</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #FFFAE5; /* Yellow background */
+            background-image: url('https://example.com/path-to-your-image.jpg'); /* Replace with your background image URL */
+            background-size: cover;
+            background-position: center center;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            background-color: #000;
+        }
+
+        .navbar-brand, .nav-link {
+            color: #fff !important;
+        }
+
+        .container {
+            padding-top: 40px;
+        }
+
+        .section-title {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #3f4e65;
+        }
+
+        .content {
+            font-size: 1.1rem;
+            color: #0056b3;
+        }
+
+        .contact-info {
+            font-weight: bold;
+            color: #0056b3;
+        }
+
+        .video-container {
+            margin-top: 30px;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            padding: 20px;
+            background-color: #333;
+            color: #fff;
+        }
+
+        .footer a {
+            color: #fff;
+        }
+    </style>
 </head>
+
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Prasanna Shrestha</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#experience">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#video">Video</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <div class="hero">
-    <h1>Prasanna Shrestha</h1>
-    <h4 class="mb-3">Consultant</h4>
-    <p class="lead">Engineering meets Agricultural</p>
-  </div>
+    <!-- About Section -->
+    <section id="about" class="container">
+        <h2 class="section-title">Prasanna Shrestha</h2>
+        <p class="content">Consultant</p>
+        <p class="content">Engineering meets Agricultural</p>
+    </section>
 
-  <div class="container my-5 section-bg">
-    <div class="section-title">What I Offer</div>
-    <ul class="list-group list-group-flush mb-4">
-      <li class="list-group-item">✅ Agricultural Farm Design & Estimate</li>
-      <li class="list-group-item">✅ DPR Preparation</li>
-      <li class="list-group-item">✅ GIS Training</li>
-    </ul>
-    <div class="row text-center mt-4">
-      <div class="col-md-3 img-card mb-4">
-        <img src="https://source.unsplash.com/400x300/?tractor" alt="Tractor">
-      </div>
-      <div class="col-md-3 img-card mb-4">
-        <img src="https://source.unsplash.com/400x300/?farm-machinery" alt="Farm Machinery">
-      </div>
-      <div class="col-md-3 img-card mb-4">
-        <img src="https://source.unsplash.com/400x300/?papaya" alt="Papaya">
-      </div>
-      <div class="col-md-3 img-card mb-4">
-        <img src="https://source.unsplash.com/400x300/?mushroom" alt="Mushroom">
-      </div>
-    </div>
-  </div>
+    <!-- Services Section -->
+    <section id="services" class="container">
+        <h2 class="section-title">What I Offer</h2>
+        <ul class="content">
+            <li>Agricultural Farm Design & Estimate</li>
+            <li>Farm Machinery Consultant</li>
+            <li>Project DPR Preparation</li>
+            <li>GIS Training</li>
+        </ul>
+    </section>
 
-  <div class="container section-bg">
-    <div class="section-title">Experience</div>
-    <div class="experience-item">
-      <strong>Consultant at Ministry of Industry, Agriculture & Cooperative, Koshi Province</strong> – 4 years
-    </div>
-    <div class="experience-item">
-      <strong>Consultant at Jeevan Bikash Samaj</strong> – 2 years
-    </div>
-    <div class="experience-item">
-      <strong>Manager at Mishrima Engineering Works Pvt. Ltd</strong> – 3 years
-    </div>
-    <div class="experience-item">
-      <strong>Agricultural Engineer at CIMMTY INTERNATIONAL</strong> – 2 years
-    </div>
-  </div>
+    <!-- Education Section -->
+    <section id="education" class="container">
+        <h2 class="section-title">My Education</h2>
+        <ul class="content">
+            <li>Bachelor in Agricultural Engineering</li>
+            <li>Master in Business Administration</li>
+            <li>Master in Geoinformatics (Running)</li>
+        </ul>
+    </section>
 
-  <div class="container section-bg">
-    <div class="section-title">Latest YouTube Video</div>
-    <div class="ratio ratio-16x9 mb-3">
-      <!-- Replace with your actual YouTube video embed URL -->
-      <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID_HERE" title="YouTube video" allowfullscreen></iframe>
-    </div>
-    <p class="text-center text-muted">Upload a new video anytime by replacing the YouTube link above.</p>
-  </div>
+    <!-- Experience Section -->
+    <section id="experience" class="container">
+        <h2 class="section-title">My Experience</h2>
+        <ul class="content">
+            <li>Consultant at Ministry of Industry, Agriculture & Cooperative (4 years)</li>
+            <li>Consultant at Jeevan Bikash Samaj (2 years)</li>
+            <li>Manager at Mishrima Engineering Works Pvt. Ltd (3 years)</li>
+            <li>Agricultural Engineer at CIMMTY INTERNATIONAL (2 years)</li>
+        </ul>
+    </section>
 
-  <div class="container section-bg">
-    <div class="section-title">Contact Me</div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item"><strong>Email:</strong> <a href="mailto:prasannastha22@gmail.com">prasannastha22@gmail.com</a></li>
-      <li class="list-group-item"><strong>Phone:</strong> +977-9842173686</li>
-      <li class="list-group-item"><strong>Facebook:</strong> <a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank">Prasanna Shrestha</a></li>
-    </ul>
-  </div>
+    <!-- Video Section -->
+    <section id="video" class="video-container container">
+        <h2 class="section-title">Latest Video</h2>
+        <iframe width="100%" height="500" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="content">Check out my latest videos and insights on agricultural engineering and consultancy.</p>
+    </section>
 
-  <footer class="text-center mt-5">
-    <p>&copy; 2025 Prasanna Shrestha</p>
-    <div class="social">
-      <a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank">Facebook</a> |
-      <a href="mailto:prasannastha22@gmail.com">Email</a>
-    </div>
-  </footer>
+    <!-- Contact Section -->
+    <section id="contact" class="container">
+        <h2 class="section-title">Contact</h2>
+        <p class="content">Feel free to get in touch with me for any inquiries or consulting opportunities.</p>
+        <p class="content"><strong class="contact-info">Email:</strong> prasannastha22@gmail.com</p>
+        <p class="content"><strong class="contact-info">Phone:</strong> +977-9842173686</p>
+        <p class="content"><a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank" class="contact-info">Visit my Facebook</a></p>
+    </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 Prasanna Shrestha. All Rights Reserved.</p>
+    </footer>
+
+    <!-- Bootstrap 5 JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net
