--- a/index.html
+++ b/index.html
@@ -1,161 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Prasanna Shrestha - Consultant</title>
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #FFFAE5; /* Yellow background */
-            background-image: url('https://example.com/path-to-your-image.jpg'); /* Replace with your background image URL */
-            background-size: cover;
-            background-position: center center;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Prasanna Shrestha - Consultant</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background: linear-gradient(135deg, #84fab0, #8fd3f4, #fbc2eb, #a6c1ee);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      color: #222;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-        .navbar {
-            background-color: #000;
-        }
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-        .navbar-brand, .nav-link {
-            color: #fff !important;
-        }
+    .overlay {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    }
 
-        .container {
-            padding-top: 40px;
-        }
+    .section-title {
+      font-weight: 600;
+      color: #444;
+      border-bottom: 2px solid #ccc;
+      margin-bottom: 10px;
+    }
 
-        .section-title {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #3f4e65;
-        }
+    a {
+      color: #0d6efd;
+      text-decoration: none;
+    }
 
-        .content {
-            font-size: 1.1rem;
-            color: #0056b3;
-        }
-
-        .contact-info {
-            font-weight: bold;
-            color: #0056b3;
-        }
-
-        .video-container {
-            margin-top: 30px;
-        }
-
-        .footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
-        }
-
-        .footer a {
-            color: #fff;
-        }
-    </style>
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Prasanna Shrestha</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#education">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#experience">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#video">Video</a>
-                    </li>
-                </ul>
-            </div>
+  <div class="container my-5">
+    <div class="overlay">
+      <header class="text-center mb-4">
+        <h1 class="display-5">Prasanna Shrestha</h1>
+        <h4 class="text-muted">Consultant</h4>
+        <p class="fst-italic">Engineering meets Agricultural</p>
+      </header>
+
+      <section class="section mb-4">
+        <h5 class="section-title">What I Offer</h5>
+        <ul>
+          <li>Agriculturals Farm Design & Estimate</li>
+          <li>Farm Machinery Consultant</li>
+          <li>Project DPR Preparation</li>
+          <li>GIS Training</li>
+        </ul>
+      </section>
+
+      <section class="section mb-4">
+        <h5 class="section-title">Education</h5>
+        <ul>
+          <li>Bachelor in Agricultural Engineering</li>
+          <li>Master in Business Administration</li>
+          <li>Master in Geoinformatics (Running)</li>
+        </ul>
+      </section>
+
+      <section class="section mb-4">
+        <h5 class="section-title">Experience</h5>
+        <ul>
+          <li>Consultant at Ministry of Industry, Agriculture & Cooperative (4 years)</li>
+          <li>Consultant at Jeevan Bikash Samaj (2 years)</li>
+          <li>Manager at Mishrima Engineering Works Pvt. Ltd (3 years)</li>
+          <li>Agricultural Engineer at CIMMYT INTERNATIONAL (2 years)</li>
+        </ul>
+      </section>
+
+      <section class="section mb-4">
+        <h5 class="section-title">Contact</h5>
+        <p>Email: <a href="mailto:prasannastha22@gmail.com">prasannastha22@gmail.com</a></p>
+        <p>Phone: <a href="tel:+9779842173686">+977-9842173686</a></p>
+        <p>Facebook: <a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank">Profile</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/prasanna-shrestha-801473126/" target="_blank">Profile</a></p>
+      </section>
+
+      <section class="section mb-4">
+        <h5 class="section-title">My Latest YouTube Video</h5>
+        <div id="youtube-section">
+          <!-- You can replace the link inside src anytime -->
+          <div class="ratio ratio-16x9">
+            <iframe id="youtube-video" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="YouTube video" allowfullscreen></iframe>
+          </div>
         </div>
-    </nav>
+        <div class="mt-3">
+          <label for="videoURL" class="form-label">Update YouTube Video URL:</label>
+          <input type="text" class="form-control" id="videoURL" placeholder="Paste new YouTube link here" />
+          <button class="btn btn-primary mt-2" onclick="updateVideo()">Update</button>
+        </div>
+      </section>
+    </div>
+  </div>
 
-    <!-- About Section -->
-    <section id="about" class="container">
-        <h2 class="section-title">Prasanna Shrestha</h2>
-        <p class="content">Consultant</p>
-        <p class="content">Engineering meets Agricultural</p>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="container">
-        <h2 class="section-title">What I Offer</h2>
-        <ul class="content">
-            <li>Agricultural Farm Design & Estimate</li>
-            <li>Farm Machinery Consultant</li>
-            <li>Project DPR Preparation</li>
-            <li>GIS Training</li>
-        </ul>
-    </section>
-
-    <!-- Education Section -->
-    <section id="education" class="container">
-        <h2 class="section-title">My Education</h2>
-        <ul class="content">
-            <li>Bachelor in Agricultural Engineering</li>
-            <li>Master in Business Administration</li>
-            <li>Master in Geoinformatics (Running)</li>
-        </ul>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience" class="container">
-        <h2 class="section-title">My Experience</h2>
-        <ul class="content">
-            <li>Consultant at Ministry of Industry, Agriculture & Cooperative (4 years)</li>
-            <li>Consultant at Jeevan Bikash Samaj (2 years)</li>
-            <li>Manager at Mishrima Engineering Works Pvt. Ltd (3 years)</li>
-            <li>Agricultural Engineer at CIMMTY INTERNATIONAL (2 years)</li>
-        </ul>
-    </section>
-
-    <!-- Video Section -->
-    <section id="video" class="video-container container">
-        <h2 class="section-title">Latest Video</h2>
-        <iframe width="100%" height="500" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p class="content">Check out my latest videos and insights on agricultural engineering and consultancy.</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="container">
-        <h2 class="section-title">Contact</h2>
-        <p class="content">Feel free to get in touch with me for any inquiries or consulting opportunities.</p>
-        <p class="content"><strong class="contact-info">Email:</strong> prasannastha22@gmail.com</p>
-        <p class="content"><strong class="contact-info">Phone:</strong> +977-9842173686</p>
-        <p class="content"><a href="https://www.facebook.com/prasanna.shrestha.14/" target="_blank" class="contact-info">Visit my Facebook</a></p>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025 Prasanna Shrestha. All Rights Reserved.</p>
-    </footer>
-
-    <!-- Bootstrap 5 JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net
+  <script>
+    function updateVideo() {
+      const url = document.getElementById('videoURL').value;
+      const videoId = url.split('v=')[1]?.split('&')[0];
+      if (videoId) {
+        document.getElementById('youtube-video').src = `https://www.youtube.com/embed/${videoId}`;
+      } else {
+        alert("Please enter a valid YouTube URL");
+      }
+    }
+  </script>
+</body>
+</html>
